...
    <string name="instruments">Instruments</string>
    <string name="addI">Add Instruments</string>
    <string name="addphoto">Add A Photo!</string>
    <string name="bio">Personal Biography</string>
    <string name="addjams">Add My Jams</string>
    <string name="prof_jam">Play My Jam</string>
    <string name="login">Login</string>
    <string name="register">Register Here</string>
    <string name="reg">Register</string>
    <string name="sup">Sign Up</string>
    <string name="free">It\'s Free!</string>
    <string name="def">Nothing to play...</string>
    <string name="prof_jam_display">Profile Jam:</string>
    <string name="uname">Username</string>
    <string name="save">Save</string>
    <string name="exp_lvl">Years of Experience</string>
    <string name="title_activity_instrument_select">Select an Instrument</string>
    <string name="title_activity_display_userpro">Display User</string>
    <string name="title_activity_swap_view">SwapView</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Log out</string>
...
